[package]
name = "mt-kahypar"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Lars Gottesbüren <lars.gottesbueren@kit.edu>", "Tobias Heuer <tobias.heuer@kit.edu>", "Nikolai Maas <nikolai.maas@kit.edu>", "Zizheng Guo <gzz_2000@126.com>"]
description = "A statically-linked Mt-KaHyPar"
repository = "https://github.com/gzz2000/mt-kahypar-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mt-kahypar-sys = { git = "https://github.com/mlaveaux/mt-kahypar-sys", features = ["bundled"] }

[features]
int64_ids = []